--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300ita‌​lic,400italic,500,500italic,700,700italic,900italic,900);
+
 * {
     padding: 0;
     margin: 0;
@@ -6,215 +8,133 @@
 html {
     scroll-behavior: smooth;
 }
-main {
-    min-height: 100vh;
-    padding: 0 8rem 5rem;
-    background-color: #FFFFFF;
-    font-family: Arial, Helvetica, sans-serif;
+body {
+    background-color: white;
+    color: #242323;
+    font-family: 'Roboto', sans-serif;
 }
-
-/*GLOBAL STYLES START*/
-li {
-    list-style: none;
-}
-a {
-    text-decoration: none;
-    color: #000000;
-    font-family: 'Arial Narrow', Arial, sans-serif;
-}
-/*GLOBAL STYLES END*/
-
 header {
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    padding-top: 1rem;
+    align-items: center;
+    padding: 1rem 7rem;
+    position: sticky;
+    top: 0;
+    background-color: #000;
+    border: 2px solid;
+}
+.logo {
+    letter-spacing: .5rem;
+    font-family: cursive;
+     color: #f98971;
+}
+.logo::first-letter{
+    color: forestgreen;
 }
 nav {
     display: flex;
     align-items: center;
     gap: 1.5rem;
 }
-.nav-link {
-    font-family: Arial, Helvetica, sans-serif;
+nav a {
+    text-decoration: none;
+    padding: .25rem;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 600;
 }
-.vector {
-    padding: 5px 7px;
-    background-color: #E5E7EB;
-    border-radius: 3px;
+nav a:hover {
+    color: #f98971;
+    opacity: 1.0;
 }
-.hero-section{
-    margin-top: 5rem;
-    padding: 0 10rem;
-    text-align: center;
+li {
+    list-style: none;
 }
-.greeting {
-    font-size: 1.25rem;
+main {
+    padding: 0 7rem;
 }
-.hero-section .pablo{
-    margin-top: .5rem;
-    font-weight: 700;
-    font-size: 2.25rem;
-    
+.hero-section {
+    height: 50vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: 3rem;
+    padding: 0 0 1rem;
+}
+.hero-1 {
+    font-size: 1.5rem;
+}
+.hero-2 {
+    font-size: 2.5rem;
+}
+button {
+    padding: .5rem 1rem;
+    background-color: forestgreen;
+    color: #fff;
+    font-weight: 600;
+    border: none;
+    margin-top: 2rem;
+    font-size: 1rem;
+    border-radius: 5px;
 }
 .about-section {
-    margin-top: 7rem;
-}
-.bio {
     display: grid;
-    grid-template-columns: 43% 1fr;
+    grid-template-columns: 40% 1fr;
+    margin-top: 5rem;
 }
-.bio .abt {
-    font-size: 1.25rem;
+.about-section img {
+    width: 20rem;
 }
-.bio .info {
-    margin-top: 1rem;
-    font-weight: 700;
-    font-size: 1.5rem;
-}
-.technology {
-    margin-top: 2rem;
-    font-size: 1.25rem;
-}
-.stack {
+.bio-text1  {
     margin-top: .5rem;
     font-size: 1.25rem;
-    font-weight: 600;
 }
-.tool {
-    margin-top: 1rem;
+.bio-text2, .bio-text3 {
+    margin-top: 1.5rem;
     font-size: 1.25rem;
 }
-.projects-section {
-    margin-top: 7rem;
+.tools {
+    margin-top: 2.5rem;
 }
-.projects-section h5 {
+.tools p {
+    margin-top: .5rem;
+    font-weight: 600;
+    color: forestgreen;
+}
+.tools span {
+    color: #000;
+}
+.work-section {
+    height: 100vh;
     text-align: center;
+    margin-top: 5rem;
+}
+footer {
+    border: 2px solid;
+    background-color: #000;
+    height: 20vh;
+    padding: 1rem 7rem;
     font-size: 1.25rem;
 }
-.works-details {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    margin-top: 3rem;
+footer p {
+    text-align: center;
+    color: #fff;
+
 }
-.gypsy {
-    margin-bottom: .5rem;
-    font-weight: 600;
-    font-size: 1.5rem;
-}
-.mongo {
-    font-size: 1.25rem;
-}
-.lorem {
-    opacity: 0.5;
-    font-size: 1.125rem;
-}
-.works-img {
-    margin-top: 1rem;
-    background-color: #B4A9F6;
-    padding: 2rem 1.5rem 1rem;
-    border-radius: 4px;
+footer div {
     display: flex;
     justify-content: center;
-    align-items: center;
-    gap: 7rem;
-}
-.images {
-    position: relative;
-    margin-left: 8rem;
-}
-.phone {
-    position: absolute;
-    right: -2rem;
-    bottom: 0;
-}
-.visit {
-    display: flex;
-    align-items: center;
-    gap: .5rem;
-    background-color: #a0aba4;
-    padding: .55rem 1rem;
-    border-radius: 4px;
-    margin-top: 10rem;
-}
-.visit a {
-    color: #F5F5F5;
-    text-transform: uppercase;
-}
-.works .yellow {
-    background-color: #FBF6CC;
-}
-.works .green {
-    background-color: #BDF5D4;
-}
-.contacts-section {
-    margin-top: 7rem;
-    text-align: center;
-}
-.contacts-section p {
-    font-weight: 600;
-    font-size: 1.8rem;
-}
-.contacts-section .say-hello {
-    border-bottom: 2px solid #000000;
-    font-family: Arial, Helvetica, sans-serif;
-}
-.contact-links {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     gap: 2rem;
-    margin-top: 2rem;
+    margin-top: 1rem;
 }
-.contact {
-    display: flex;
-    align-items: center;
-    gap: .5rem;
-} 
-@media (max-width: 640px) {
-    :root {
-        font-size: 10px;
-    }
-    main {
-        padding: 0 4rem 3rem;
-    }
-    .hero-section  {
-        padding: 0;
-    }
-    .pablo {
-        font-size: 1rem;
-    }
-    .bio {
-        grid-template-columns: 1fr;
-        font-size: 1rem;
-    }
-    .bio img {
-        margin-bottom: 1rem;
-        width: 20rem;
-    }
-    .works-img {
-        gap: 3rem;
-    }
-    .images {
-        margin-left: 3rem;
-    }
-    .laptop {
-        width: 10rem;
-    }
-    .phone {
-        width: 3rem;
-        right: -.5rem;
-    }
-    .visit {
-        margin-top: 3rem;
-    }
-    .visit a {
-        font-size: .8rem;
-    }
-    .visit img, .contact-links img {
-        width: .5rem;
-    }
-    .contacts-section p{
-        font-size: .8rem;
-    }
+footer a {
+    text-decoration: none;
+    color: forestgreen;
+    font-weight: 600;
+}
+footer a:hover {
+    color: #f98971;
 }
