--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300ita‌​lic,400italic,500,500italic,700,700italic,900italic,900);
+@import url('http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300ita‌​lic,400italic,500,500italic,700,700italic,900italic,900');
 
 * {
     padding: 0;
@@ -9,132 +9,154 @@ html {
     scroll-behavior: smooth;
 }
 body {
-    background-color: white;
-    color: #242323;
+    background-color: #fff;
     font-family: 'Roboto', sans-serif;
-}
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem 7rem;
-    position: sticky;
-    top: 0;
-    background-color: #000;
-    border: 2px solid;
-}
-.logo {
-    letter-spacing: .5rem;
-    font-family: cursive;
-     color: #f98971;
-}
-.logo::first-letter{
-    color: forestgreen;
-}
-nav {
-    display: flex;
-    align-items: center;
-    gap: 1.5rem;
-}
-nav a {
-    text-decoration: none;
-    padding: .25rem;
-    color: #fff;
-    text-transform: uppercase;
-    font-weight: 600;
-}
-nav a:hover {
-    color: #f98971;
-    opacity: 1.0;
 }
 li {
     list-style: none;
 }
-main {
-    padding: 0 7rem;
+a {
+    text-decoration: none;
+}   
+/* END OF GLOBAL STYLES */
+
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: .5rem 3rem;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    background-color: #fff;
 }
+.logo {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 1.25rem;
+    font-weight: 900;
+    transition: all .5s ease-in-out;
+    color: navy;
+}
+nav {
+    display: flex;
+    align-items: center;
+    gap: 1.7rem;
+}
+nav a{
+    transition: all 0.5s ease-in-out;
+    font-size: 1.15rem;
+    font-weight: 500;
+    padding: 0 .25rem;
+    color: #000;
+}
+nav a:hover {
+    color:  orangered;
+}
+nav .phone {
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+    font-size: 1rem;
+    margin-right: 2rem;
+    font-weight: 500;
+}
+/* HEADER SECTION ENDS */
+
 .hero-section {
-    height: 50vh;
-    width: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.9)), url(/media/windows-ACWCQs6KXcw-unsplash.jpg) center/cover fixed no-repeat;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin-top: 3rem;
-    padding: 0 0 1rem;
+    gap: 1rem;
+    padding: 5rem;
+    color: #fff;
 }
 .hero-1 {
-    font-size: 1.5rem;
+    text-transform: uppercase;
+    letter-spacing: .5rem;
+    font-size: 3rem;
+    font-weight: 600;
+    color: orangered;
+    transition: all .5s ease-in-out;
 }
 .hero-2 {
-    font-size: 2.5rem;
-}
-button {
-    padding: .5rem 1rem;
-    background-color: forestgreen;
-    color: #fff;
     font-weight: 600;
-    border: none;
-    margin-top: 2rem;
-    font-size: 1rem;
-    border-radius: 5px;
+    font-size: 2rem;
+    color: #fff;
 }
+/* END OF HERO SECTION */
+
 .about-section {
+    min-height: 80vh;
+    padding: 1rem 7rem;
     display: grid;
-    grid-template-columns: 40% 1fr;
-    margin-top: 5rem;
+    grid-template-columns: 55% 1fr;
+    place-items: center;
 }
-.about-section img {
-    width: 20rem;
-}
-.bio-text1  {
-    margin-top: .5rem;
-    font-size: 1.25rem;
+.bio {
+    max-width: 90%;
 }
 .bio-text2, .bio-text3 {
-    margin-top: 1.5rem;
-    font-size: 1.25rem;
+    margin-top: 1rem;
 }
-.tools {
-    margin-top: 2.5rem;
+.tools h3 {
+    margin-top: 2rem;
 }
-.tools p {
-    margin-top: .5rem;
-    font-weight: 600;
-    color: forestgreen;
+.bio-photo {
+    position: relative;
+  }
+  
+  .bio-photo::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 22rem;
+    height: 17rem;
+    outline: 0.4rem solid navy;
+    z-index: -1;
+    transition: all 1s ease-in-out;
+  }
+  .bio-photo:hover:before {
+    right: -1rem;
+    top: -1rem;
 }
-.tools span {
-    color: #000;
+.bio-photo img {
+   max-width: 22rem;
+   height: 17rem;
 }
+/* END OF ABOUT SECTION */
+
 .work-section {
-    height: 100vh;
-    text-align: center;
-    margin-top: 5rem;
-}
-footer {
-    border: 2px solid;
-    background-color: #000;
-    height: 20vh;
+    min-height: 80vh;
     padding: 1rem 7rem;
-    font-size: 1.25rem;
+}
+.work-section h2 {
+    text-align: center;
+}
+/* END OF WORK SECTION */
+
+footer {
+    padding: .5rem 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-weight: 500;
+    background-color: #0a0b0a;
 }
 footer p {
-    text-align: center;
-    color: #fff;
-
+    font-size: 1.25rem;
+    color:#fff;
 }
 footer div {
     display: flex;
-    justify-content: center;
-    gap: 2rem;
-    margin-top: 1rem;
+    gap: 1.5rem;
 }
 footer a {
-    text-decoration: none;
-    color: forestgreen;
-    font-weight: 600;
-}
-footer a:hover {
-    color: #f98971;
+    color: #fff;
+    font-size: 1.25rem;
 }
