--- a/styles.css
+++ b/styles.css
@@ -33,13 +33,10 @@ header {
 }
 .logo {
     font-family: 'Courier New', Courier, monospace;
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     font-weight: 900;
     transition: all .5s ease-in-out;
     color: darkblue;
-}
-.logo::first-letter{
-    color: orangered;
 }
 nav {
     display: flex;
@@ -50,11 +47,16 @@ nav a{
     transition: all 0.5s ease-in-out;
     font-size: 1.15rem;
     font-weight: 500;
-    padding: 0 .25rem;
-    color: #000;
+    background-color: #000;
+    color: orangered;
+    opacity: 0.8;
+    padding: .1rem .2rem;
+    border: .025rem solid navy;
+    border-radius: .25rem;
 }
 nav a:hover {
-    color:  orangered;
+    background-color: #fff;
+    color:  navy;
 }
 nav .phone {
     display: flex;
@@ -63,6 +65,7 @@ nav .phone {
     font-size: 1rem;
     margin-right: 2rem;
     font-weight: 500;
+    color: navy;
 }
 /* HEADER SECTION ENDS */
 
@@ -172,4 +175,29 @@ footer a {
     font-weight: 600;
     border: 2px solid navy;
     border-radius: .25rem;
+}
+
+
+/* MEDIA QUERIES */
+@media (max-width: 640px) {
+    :root {
+        font-size: 10px;
+    }
+    .hero-section {
+        padding: 2rem;
+    }
+    .about-section {
+        display: block;
+        padding: 2rem;
+    }
+    .bio-photo img {
+        display: block;
+        margin: 2rem auto;
+        outline: .3rem solid navy;
+
+    }
+    .bio-photo::before {
+       display: none;
+      }
+    
 }
