--- a/styles.css
+++ b/styles.css
@@ -14,26 +14,33 @@ body {
     font-family: roboto;
 }
 header {
-    padding: .5rem 3.5rem;
+    padding: .5rem 3rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* position: sticky;
+    position: sticky;
     top: 0;
     z-index: 1;
-    background-color: transparent; */
+    background-color: transparent;
 }
 .logo {
     font-family: 'Courier New', Courier, monospace;
     font-weight: 700;
     color: #000;
 }
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+}
 nav a{
     text-decoration: none;
     font-size: 1.25rem;
-    padding: 0 1.5rem;
-    font-family: roboto;
-    color: #000; 
+    font-family: monospace;
+    font-style: italic;
+    color: #000;
+    text-transform: uppercase;
 }
 
 .hero-circle {
@@ -49,7 +56,7 @@ nav a{
     color: snow;
     transition: all 1s ease-in-out;
     position: absolute;
-    animation: move 5s infinite;
+    animation: move 7s infinite;
   }
 
   @keyframes move {
@@ -61,14 +68,14 @@ nav a{
     }
     25% {
       top: 3rem;
-      left: 51rem;
-      background: #ebf9f4;
+      left: 50rem;
+      background: pink;
       color: #000;
     }
     50% {
       top: 20rem;
-      left: 51rem;
-      background: #2c2d36;
+      left: 50rem;
+      background: green;
       color: snow;
     }
     75% {
