--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ section.contact {
 
   .about-content {
     padding: 0 2vw;
-    margin-top: 4rem;
+    margin-top: 3rem;
     display: block;
     text-align: center;
   }
@@ -235,7 +235,7 @@ section.contact {
   }
 
   .about-text {
-    margin-top: 4rem;
+    margin-top: 3rem;
     display: block;
   }
 
@@ -267,7 +267,7 @@ section.contact {
   }
 
   section.contact {
-    padding: 4rem 0;
+    padding: 4rem 0 2rem;
     min-height: fit-content;
   }
 
