--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  /* border: 1px solid red; */
 }
 
 /* Global styles */
@@ -31,6 +32,11 @@ a {
   font-weight: 500;
 }
 
+h2 {
+  color: #e6f1ff;
+  font-weight: 600;
+}
+
 section {
   min-height: 100vh;
   padding: 0 9rem;
@@ -41,7 +47,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 4rem;
+  padding: 0.5rem 4rem;
   position: sticky;
   top: 0;
   z-index: 1;
@@ -74,7 +80,7 @@ header a:hover {
 .hero-greeting {
   color: #64ffda;
   letter-spacing: 2px;
-  padding-bottom: 1rem;
+  padding: 0 2px;
 }
 
 .hero-name {
@@ -87,6 +93,7 @@ header a:hover {
 .hero-mainText {
   font-size: 4rem;
   font-weight: 700;
+  margin-top: -16px;
 }
 
 .hero-subText {
@@ -94,9 +101,11 @@ header a:hover {
   margin-top: 1.5rem;
 }
 
-.hero .mail {
+.whatsapp,
+.mail {
   display: block;
   margin-top: 2.5rem;
+  margin-left: 8px;
   padding: 1rem 1.75rem;
   border: 1px solid #64ffda;
   color: #64ffda;
@@ -105,10 +114,10 @@ header a:hover {
   border-radius: 3px;
   letter-spacing: 2px;
   width: fit-content;
-  font-weight: 400;
 }
 
-.hero .mail:hover {
+.whatsapp:hover,
+.mail:hover {
   animation: shadow-pop-tr 0.3s cubic-bezier(0.47, 0, 0.745, 0.715) both;
 }
 
@@ -129,7 +138,7 @@ header a:hover {
 }
 
 /* Number */
-.phone-number_container {
+.number-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -141,25 +150,31 @@ header a:hover {
 }
 
 .number {
-  display: flex;
-  flex-direction: column;
+  writing-mode: vertical-lr;
+  letter-spacing: 2px;
   font-weight: 500;
-  font-style: oblique;
+}
+
+.number-container .line {
+  height: 100px;
+  border-right: 1px solid #a8b2d1;
 }
 
 /* About Section */
-.about h2 {
-  color: #e6f1ff;
-  font-weight: 600;
+.about {
+  margin-top: 1rem;
 }
 
 .about-content_wrapper {
   margin-top: 2rem;
   display: grid;
   grid-template-columns: 60% 40%;
-  justify-self: center;
-  align-items: center;
-  gap: 3.5rem;
+  place-items: center;
+  gap: 2rem;
+}
+
+.about p {
+  font-size: 17px;
 }
 
 .about-subText_conclusion,
@@ -167,100 +182,117 @@ header a:hover {
   margin-top: 1rem;
 }
 
-.tech-wrapper {
+.tech-container {
   margin-top: 1rem;
-  display: flex;
-  gap: 5rem;
-  font-size: 14px;
+  display: grid;
+  grid-template-columns: repeat(3, 110px);
+  place-items: center;
+  gap: 1rem 2rem;
 }
 
-.tech-grid {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
+.tech-container span {
+  border: 1px solid #64ffda;
+  padding: 0.4rem 0.6rem;
+  width: 7rem;
+  text-align: center;
+  border-radius: 3px;
+  color: #e6f1ff;
 }
 
 .about img.my_pic {
   width: 20rem;
   border-radius: 3px;
-  /* filter: drop-shadow(5px -5px 2px #64ffda); */
 }
 
 .about .titles {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   color: #64ffda;
-  margin-left: 42px;
+  margin-left: 52px;
+  letter-spacing: 2px;
+  padding: 0.5rem;
 }
 
 /* Project Section */
 .project {
-  min-height: 100vh;
+  margin-top: 9rem;
+}
+
+.project-subText {
+  margin-top: 2rem;
+  font-size: 17px;
+}
+
+.project-container {
+  margin-top: 2rem;
   display: flex;
-  flex-direction: column;
-  transition: none 2s ease-in;
+  gap: 2rem;
 }
 
-.project h2 {
-  text-align: center;
-  font-family: "Quicksand", sans-serif;
-  font-size: 1.3rem;
-  font-weight: 500;
-  letter-spacing: 2px;
-  text-transform: uppercase;
+.project .card {
+  width: 23rem;
+  font-family: "Poppins", sans-serif;
+  background: rgba(2, 12, 27, 0.7);
+  color: #e6f1ff;
+  border-radius: 16px;
+  padding: 10px;
 }
 
-.projects-container {
-  flex: 1;
-  margin-top: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.my_project {
-  width: 30%;
-  cursor: pointer;
-  background-color: #6d6d6d;
-}
-
-.project img {
+.project .card img {
+  border-radius: 3px;
   width: 100%;
-  height: 16rem;
+  height: 15rem;
 }
 
-.my_project:hover {
-  transform: scale(1.04);
-  transition: all 1s ease;
+.card-title {
+  margin-top: 1rem;
 }
 
-.project figcaption {
-  padding: 0.5rem;
-  text-align: center;
-  font-size: 1.2rem;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 500;
+.card-text {
+  color: #a8b2d1;
 }
+
+.card .btn {
+  background: #0a192f;
+  color: #64ffda;
+  font-family: "Poppins", sans-serif;
+}
+
+.card .btn:hover {
+  filter: brightness(120%);
+}
+
 /* Contact Section */
 .contact {
   min-height: fit-content;
-  padding: 4rem 2rem 3rem;
-  transition: all 2s ease;
+  margin-top: 11rem;
+  text-align: center;
+}
+
+.contact-headText {
+  color: #64ffda;
+  letter-spacing: 2px;
+  font-size: 17px;
 }
 
 .contact h2 {
-  text-align: center;
-  font-family: "Quicksand", sans-serif;
-  font-size: 1.3rem;
-  font-weight: 500;
-  letter-spacing: 2px;
-  text-transform: uppercase;
+  font-size: 3.5rem;
 }
 
-.contact p {
-  text-align: center;
-  font-size: 1.125rem;
-  font-family: "Montserrat", sans-serif;
-  margin-top: 2rem;
+.contact-subText {
+  padding: 0 8vw;
+  margin-top: 1rem;
+  font-size: 17px;
+}
+
+.mail {
+  margin: auto;
+  margin-top: 4rem;
+}
+
+footer {
+  margin-top: 7rem;
+  padding-bottom: 1rem;
+  font-style: oblique;
 }
 
 /* Key Frames for animation */
@@ -281,59 +313,70 @@ header a:hover {
     font-size: 12px;
   }
 
-  section.about {
-    padding: 4rem 3vw;
+  header nav,
+  .social-icons,
+  .number-container {
+    display: none;
+  }
+
+  body {
+    padding: 0 1.5rem;
+  }
+
+  section {
+    padding: 0;
     min-height: fit-content;
   }
 
-  .about-content {
-    margin-top: 3rem;
+  header {
+    padding: 0.5rem 0;
+  }
+
+  header img.logo {
+    margin-left: -0.9rem;
+  }
+
+  .hero-name {
+    font-size: 4rem;
+  }
+
+  .hero-mainText {
+    font-size: 3rem;
+    margin-top: 0;
+  }
+
+  .hero-subText,
+  .about p,
+  .project-subText,
+  .contact-subText {
+    font-size: 14px;
+  }
+
+  .about {
+    margin-top: 8rem;
+  }
+
+  .about .titles {
+    margin-left: 0;
+  }
+
+  .about-content_wrapper {
     display: block;
     text-align: center;
   }
 
-  .about .img-container {
-    width: 100%;
-  }
-
-  .about-text {
-    margin-top: 3rem;
-    display: block;
-    padding: 0.25rem 1rem 1rem;
-  }
-
-  .about-text p {
-    margin-top: 1.5rem;
-  }
-
-  section.project {
-    padding: 4rem 3vw;
-  }
-
-  .my_project:hover {
-    transform: scale(1);
-  }
-
-  .projects-container {
-    display: block;
-    margin-top: 0;
-  }
-
-  .my_project {
-    width: 100%;
+  .about img.my_pic {
     margin-top: 3rem;
   }
 
-  .project figcaption {
-    padding: 0.8rem;
+  .tech-container {
+    margin-top: 2.5rem;
+    grid-template-columns: repeat(3, 97px);
   }
 
-  section.contact {
-    padding: 4rem 3vw 2rem;
-  }
-
-  .social-icons {
-    margin-top: 2rem;
+  .project-container {
+    flex-direction: column;
+    align-items: center;
   }
 }
 
@@ -342,56 +385,11 @@ header a:hover {
   :root {
     font-size: 13px;
   }
-
-  section.about {
-    padding: 4rem 5vw;
-    min-height: fit-content;
-  }
-
-  .about-content {
-    margin-top: 3rem;
-    display: block;
-    text-align: center;
-  }
-
-  .about .img-container {
-    width: 100%;
-  }
-
-  .about-text {
-    margin-top: 3rem;
-    display: block;
-    padding: 0.25rem 1rem 1rem;
-  }
-
-  .about-text p {
-    margin-top: 1.5rem;
-  }
-
-  section.project {
-    padding: 4rem 5vw;
-  }
-
-  .projects-container {
-    flex-wrap: wrap;
-  }
-
-  .my_project {
-    width: 47%;
-  }
 }
 
 /* Media Queries for pc */
 @media (min-width: 854px) and (max-width: 1028px) {
   :root {
     font-size: 14px;
-  }
-
-  section.about {
-    padding: 4rem 3vw;
-  }
-
-  section.project {
-    padding: 4rem 3vw;
   }
 }
