--- a/style.css
+++ b/style.css
@@ -106,10 +106,9 @@ header a:hover {
 .mail {
   display: block;
   margin-top: 2.5rem;
-  padding: 16px 28px;
+  padding: 1rem 1.5rem;
   border: 1px solid #64ffda;
   color: #64ffda;
-  background-color: inherit;
   font-size: 16px;
   font-weight: 400;
   border-radius: 3px;
