--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ header a:hover {
 }
 
 .about .titles {
-  font-size: 1.1rem;
+  font-size: 18px;
   color: #64ffda;
   margin-left: 52px;
   letter-spacing: 2px;
@@ -240,7 +240,7 @@ header a:hover {
 .project .card img {
   border-radius: 3px;
   width: 100%;
-  height: 15rem;
+  height: 240px;
 }
 
 .card-title {
@@ -368,6 +368,7 @@ footer {
 
   .about .titles {
     margin-left: 0;
+    font-size: 16px;
   }
 
   .about-content_wrapper {
