--- a/style.css
+++ b/style.css
@@ -132,6 +132,10 @@ header a:hover {
   margin-left: 9px;
 }
 
+.social-icons__mobile {
+  display: none;
+}
+
 /* Number */
 .number-container {
   display: flex;
@@ -281,7 +285,7 @@ header a:hover {
 }
 
 footer {
-  margin-top: 7rem;
+  margin-top: 5rem;
   padding-bottom: 1rem;
   font-style: oblique;
 }
@@ -387,6 +391,15 @@ footer {
 
   .contact h2 {
     font-size: 3rem;
+  }
+
+  .social-icons__mobile {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
+    margin-top: 5rem;
   }
 }
 
